--- a/log.html
+++ b/log.html
@@ -17,14 +17,14 @@
 <div id="content">
 <article>
 
-<ul><li>大概写了两三天，从gaia到完全手敲的代码（好吧，目前还是挺suck的，但我自豪死了）。不想再改css了，着重看看包含的jquery。Textpattern的语义模型真的是强大，重用率很高。 -jea_pygments_txp这个语法高亮的plugin在validator那里总是报错，暂时不用，找找原因。- 原因是还是菜鸟的缘故啊，不能在p标签中不能包含pre。 <sup>Aug 01st, 2010</sup> </li></ul>
-<ul><li>想了想，加上media query吧，页面在iphone safari下挺杯具的。 <sup>Aug 02nd, 2010</sup> </li></ul>
-<ul><li>现在最起码在mobile safari下还行吧，死了多少脑细胞啊～～，还有600px到970px～的情况，明天加。 <sup>Aug 02nd, 2010</sup> </li></ul>
-<ul><li>我这个不折腾会死星人啊，又重新 -设计- 了一遍界面，现在各种分辨率下都还可以了，至于尚未支持media query的浏览器， -等等吧- 别等了吧。 <sup>Aug 08th, 2010</sup> </li></ul>
+<ul><li>大概写了两三天，从 gaia 到完全手敲的代码（好吧，目前还是挺 suck 的，但我自豪死了）。不想再改 css 了，着重看看包含的 jquery。Textpattern 的语义模型真的是强大，重用率很高。 -jea_pygments_txp 这个语法高亮的 plugin 在 validator 那里总是报错，暂时不用，找找原因。- 原因是还是菜鸟的缘故啊，不能在 p 标签中不能包含 pre。 <sup>Aug 01st, 2010</sup> </li></ul>
+<ul><li>想了想，加上 media query 吧，页面在 iphone safari 下挺杯具的。 <sup>Aug 02nd, 2010</sup> </li></ul>
+<ul><li>现在最起码在 mobile safari 下还行吧，死了多少脑细胞啊～～，还有 600px 到 970px～ 的情况，明天加。 <sup>Aug 02nd, 2010</sup> </li></ul>
+<ul><li>我这个不折腾会死星人啊，又重新 -设计- 了一遍界面，现在各种分辨率下都还可以了，至于尚未支持 media query 的浏览器， -等等吧- 别等了吧。 <sup>Aug 08th, 2010</sup> </li></ul>
 <ul><li>Fixed several ??bugs?? ? <sup>Aug 10th, 2010</sup> </li></ul>
-<ul><li>Here we go, HTML5. IE9出来就改成[if gte IE 8]。 <sup>Aug 20th, 2010</sup> </li></ul>
+<ul><li>Here we go，HTML5。IE9 出来就改成 [if gte IE 8]。 <sup>Aug 20th, 2010</sup> </li></ul>
 <ul><li>Restyle, again... Something weird on media query. Well, no idea about that, should be max-width: 960px in the first judgement. But seems that Gecko take box shadow included in the width in my browser? weird... <sup>Oct 06th, 2010</sup> </li></ul>
-<ul><li>啊哈，昨天的事在新的nightly ( _Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101007 Firefox/4.0b8pre_ ) 中已经解决了，#446693 [Core:Layout]--moz-box-shadow and text-shadow causing scrollbars [All]。嘿嘿。真是心有灵犀啊，Mozilla君。 <sup>Oct 07th, 2010</sup>  </li></ul>
+<ul><li>啊哈，昨天的事在新的 nightly ( _Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101007 Firefox/4.0b8pre_ ) 中已经解决了，#446693 [Core:Layout]--moz-box-shadow and text-shadow causing scrollbars [All]。嘿嘿。真是心有灵犀啊，Mozilla 君。 <sup>Oct 07th, 2010</sup>  </li></ul>
 <ul><li>Very very weird..., media queries doesn't make out in IE9 beta, wrapper width != HTML width, have to increase first judgement to 980px. <sup>Oct 13th, 2010<sup> </li></ul>
 <ul><li>好吧，我又来折腾了， <sup>Oct 19th, 2010</sup> </li></ul>
 <ul><li>有很多话要说，如果近期不死的话就准备写 <sup>Nov 22th, 2010<sup> </li></ul>
